--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,13 @@
 	margin: 0 auto;
 }
 
+.card {
+	background: #fff;
+	border-radius: 10px;
+	padding: 20px;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
 .buttons-container {
 	display: flex;
 	justify-content: center;
@@ -32,6 +39,15 @@
 	border: 2px solid hsl(var(--accent-color-hue), var(--accent-color-saturation), 92%);
 	border-radius: 15px;
 	padding: 15px 20px;
+}
+
+.steps {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px; /* Расстояние между блоками */
+	margin-top: 20px;
+	width: 100%;
 }
 
 .steps-list {
